@@ -6,11 +6,9 @@ import de.dhbw.karlsruhe.students.mailflow.core.domain.email.Email;
 import de.dhbw.karlsruhe.students.mailflow.core.domain.email.value_objects.Address;
 import de.dhbw.karlsruhe.students.mailflow.core.domain.email.value_objects.Subject;
 import de.dhbw.karlsruhe.students.mailflow.external.infrastructure.email.EmlParser;
-import jakarta.mail.MessagingException;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
-import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
@@ -20,52 +18,58 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-public class ParseEmlTest {
+class ParseEmlTest {
 
-    @Test
-    public void parsesEmlFileToEmailModel() {
-        // Arrange
-        InputStream inputStream = new ByteArrayInputStream("""
-                From: someone@example.com
-                To: someone_else@example.com
-                Subject: An RFC 822 formatted message
+        @Test
+        void parsesEmlFileToEmailModel() {
+                // Arrange
+                InputStream inputStream = new ByteArrayInputStream("""
+                                From: someone@example.com
+                                To: someone_else@example.com
+                                Subject: An RFC 822 formatted message
 
-                This is the plain text body of the message. Note the blank line
-                between the header information and the body of the message.""".getBytes(StandardCharsets.UTF_8));
+                                This is the plain text body of the message. Note the blank line
+                                between the header information and the body of the message."""
+                                .getBytes(StandardCharsets.UTF_8));
 
-        // Act
-        EmailParser parser = new EmlParser();
-        Email email = parser.parseToEmail(inputStream);
+                // Act
+                EmailParser parser = new EmlParser();
+                Email email = parser.parseToEmail(inputStream);
 
-        // Assert
-        assertNotNull(email);
+                // Assert
+                assertNotNull(email);
 
-        assertEquals(email.getEmailMetadata().sender(), new Address("someone", "example.com"));
+                assertEquals(new Address("someone", "example.com"),
+                                email.getEmailMetadata().sender());
 
-        assertEquals(email.getEmailMetadata().recipients().to(), List.of(new Address("someone_else", "example.com")));
-        assertEquals(email.getEmailMetadata().recipients().cc(), Collections.emptyList());
-        assertEquals(email.getEmailMetadata().recipients().bcc(), Collections.emptyList());
+                assertEquals(List.of(new Address("someone_else", "example.com")),
+                                email.getEmailMetadata().recipients().to());
+                assertEquals(Collections.emptyList(), email.getEmailMetadata().recipients().cc());
+                assertEquals(Collections.emptyList(), email.getEmailMetadata().recipients().bcc());
 
-        assertEquals(email.getEmailMetadata().subject(), new Subject("An RFC 822 formatted message"));
-        assertEquals(email.getContent(), "This is the plain text body of the message. Note the blank line\n" + //
-                "between the header information and the body of the message.");
-    }
+                assertEquals(new Subject("An RFC 822 formatted message"),
+                                email.getEmailMetadata().subject());
+                assertEquals("This is the plain text body of the message. Note the blank line\n"
+                                + "between the header information and the body of the message.",
+                                email.getContent());
+        }
 
-    @Test
-    public void causesExceptionOnMalformedEmlFile() {
-        // Arrange
-        InputStream inputStream = new ByteArrayInputStream("""
-                From: someone@example.com
-                To: someone_e lse@example.com
-                Subject: An RFC 822 formatted message
+        @Test
+        void causesExceptionOnMalformedEmlFile() {
+                // Arrange
+                InputStream inputStream = new ByteArrayInputStream("""
+                                From: someone@example.com
+                                To: someone_e lse@example.com
+                                Subject: An RFC 822 formatted message
 
-                This is the plain text body of the message. Note the blank line
-                between the header information and the body of the message.""".getBytes(StandardCharsets.UTF_8));
+                                This is the plain text body of the message. Note the blank line
+                                between the header information and the body of the message."""
+                                .getBytes(StandardCharsets.UTF_8));
 
-        // Act
-        EmailParser parser = new EmlParser();
+                // Act
+                EmailParser parser = new EmlParser();
 
-        // Assert
-        assertThrows(EmailParsingException.class, () -> parser.parseToEmail(inputStream));
-    }
+                // Assert
+                assertThrows(EmailParsingException.class, () -> parser.parseToEmail(inputStream));
+        }
 }
